[project]
name = "tiber"
version = "0.1.0"
description = "An intelligent notification delivery infrastructure"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "boto3>=1.43.40",
    "celery>=5.6.3",
    "fastapi>=0.138.2",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.1",
    "scikit-learn>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.28.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/tiber"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py314"
 
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
 
[tool.ruff.lint.isort]
known-first-party = ["tiber"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
 
[tool.coverage.run]
source = ["src/tiber"]
omit = ["tests/*"]
